--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Install dependencies
       run: bundle install
     - name: Run tests
-      run: bundle exec rake ci
+      run: bundle exec rake
